[Lum] Optimizations and bug fixes moving to Java26